categories and products cruds implemented